--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,50 +1,12 @@
-buildPack: go
+buildPack: none
 pipelineConfig:
-  env:
-  - name: CODECOV_TOKEN
-    valueFrom:
-      secretKeyRef:
-        key: token
-        name: codecov
   pipelines:
-    pullRequest:
-      build:
-        preSteps:
-        - name: unit-tests
-          command: make unittest
-        - name: code-coverage
-          command: codecov.sh
-          agent:
-            image: vfarcic/codecov
-      promote:
-        steps:
-        - name: rollout
-          command: |
-            NS=`echo cd-$REPO_OWNER-go-demo-6-$BRANCH_NAME | tr '[:upper:]' '[:lower:]'`
-            sleep 15
-            kubectl -n $NS rollout status deployment preview-preview --timeout 3m
-        - name: functional-tests
-          command: ADDRESS=`jx get preview --current 2>&1` make functest
-    overrides:
-    - pipeline: release
-      # This is new
-      stage: build
-      name: make-build
-      steps:
-      - loop:
-          variable: GOOS
-          values:
-          - darwin
-          - linux
-          - windows
-          steps:
-          - name: build
-            command: CGO_ENABLED=0 GOOS=${GOOS} GOARCH=amd64 go build -o bin/go-demo-6_${GOOS} main.go
     release:
-      promote:
-        steps:
-        - name: rollout
-          command: |
-            sleep 15
-            kubectl -n cd-staging rollout status deployment jx-go-demo-6 --timeout 3m
-
+      pipeline:
+        agent:
+          image: go
+        stages:
+        - name: nothing
+          steps:
+          - name: silly
+            command: echo "This is a silly pipeline"
