--- a/charts/go-demo-6/templates/deployment.yaml
+++ b/charts/go-demo-6/templates/deployment.yaml
@@ -1,3 +1,5 @@
+{{- if .Values.knativeDeploy }}
+{{- else }}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -44,3 +46,4 @@ spec:
         resources:
 {{ toYaml .Values.resources | indent 12 }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
+{{- end }}
