--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -27,12 +27,14 @@ spec:
               periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
               successThreshold: {{ .Values.livenessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
+              failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
             readinessProbe:
               httpGet:
                 path: {{ .Values.probePath }}
               periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+              failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
             resources:
 {{ toYaml .Values.resources | indent 14 }}
 {{- end }}
