--- a/charts/go-demo-6/values.yaml
+++ b/charts/go-demo-6/values.yaml
@@ -27,10 +27,12 @@ livenessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+  failureThreshold: 6
 readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+  failureThreshold: 6
 terminationGracePeriodSeconds: 10
 go-demo-6-db:
   replicaSet:
@@ -39,4 +41,3 @@ go-demo-6-db:
 
   usePassword: false
 knativeDeploy: true
-
