--- a/charts/go-demo-6/values.yaml
+++ b/charts/go-demo-6/values.yaml
@@ -27,7 +27,6 @@ livenessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
-  failureThreshold: 6
 readinessProbe:
   periodSeconds: 10
   successThreshold: 1
@@ -37,8 +36,6 @@ terminationGracePeriodSeconds: 10
 go-demo-6-db:
   replicaSet:
     enabled: true
-
-
   usePassword: false
-
+knativeDeploy: true
 
