--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -33,6 +33,7 @@ spec:
               periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+              failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
             resources:
 {{ toYaml .Values.resources | indent 14 }}
 {{- end }}
