--- a/charts/go-demo-6/values.yaml
+++ b/charts/go-demo-6/values.yaml
@@ -31,6 +31,7 @@ readinessProbe:
   periodSeconds: 10
   successThreshold: 1
   timeoutSeconds: 1
+  failureThreshold: 10
 terminationGracePeriodSeconds: 10
 go-demo-6-db:
   replicaSet:
