--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -20,6 +20,14 @@ spec:
             env:
             - name: DB
               value: {{ template "fullname" . }}-db
+            readinessProbe:
+              httpGet:
+                path: {{ .Values.probePath }}
+                port: 8080
+              periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
+              successThreshold: {{ .Values.readinessProbe.successThreshold }}
+              timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
+              failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
             resources:
 {{ toYaml .Values.resources | indent 14 }}
 {{- end }}
