--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -27,6 +27,7 @@ spec:
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
               failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
+              initialDelaySeconds: 6
             resources:
 {{ toYaml .Values.resources | indent 14 }}
 {{- end }}
