--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -21,8 +21,8 @@ spec:
             - name: DB
               value: {{ template "fullname" . }}-db
             readinessProbe:
-              httpGet:
-                path: {{ .Values.probePath }}
+              tcpSocket:
+                port: 8080
               periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
