--- a/charts/go-demo-6/templates/ksvc.yaml
+++ b/charts/go-demo-6/templates/ksvc.yaml
@@ -20,13 +20,19 @@ spec:
             env:
             - name: DB
               value: {{ template "fullname" . }}-db
+            livenessProbe:
+              httpGet:
+                path: {{ .Values.probePath }}
+              initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
+              periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
+              successThreshold: {{ .Values.livenessProbe.successThreshold }}
+              timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
             readinessProbe:
               tcpSocket:
               periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
               successThreshold: {{ .Values.readinessProbe.successThreshold }}
               timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
               failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
-              initialDelaySeconds: 6
             resources:
 {{ toYaml .Values.resources | indent 14 }}
 {{- end }}
